Fixed an aesthetic issue with input fields and buttons overlapping div

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -3,6 +3,7 @@
 }
 html {
   font-family: 'Times New Roman', Arial, serif;
+  font-size: 62.5%;
 }
 body {
   margin: 0;
@@ -15,7 +16,7 @@ button:focus {
 }
 label {
   /* font-family: cursive; */
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 header {
   display: flex;
@@ -51,7 +52,7 @@ header button:active,
 }
 .note {
   padding: 1rem 1rem;
-  font-size: 1.1rem;
+  font-size: 2rem;
   font-weight: bold;
   width: 95%;
   height: auto;
@@ -64,6 +65,10 @@ header button:active,
   margin-bottom: 0.5rem;
 }
 
+.note-content > input {
+  width:60%;
+  max-width: 100%;
+}
 .note:hover {
   background: #ddff8d;
 }
@@ -73,7 +78,7 @@ header button:active,
 
 .btn-note {
   font: inherit;
-  font-size: 0.6rem;
+  font-size: 1rem;
   height: 1.5rem;
   background: #1f1bdd;
   border: 1px solid #fdfdfd;
@@ -104,7 +109,7 @@ header button:active,
 }
 
 .note-body {
-  font-size: 1.2rem;
+  font-size: 2rem;
   text-align: center;
   width: auto;
   color: rgb(0, 0, 0);
@@ -226,13 +231,12 @@ header button:active,
 }
 
 #note-title {
-  font-size: 0.9rem;
-  border: 2px double black;
-  padding: 0 0.2rem;
-  outline: none;
+  font-size: 2rem;
+  border: 1px double black;
+  padding: 0 .3rem;
 }
 #text-box {
-  font-size: 16pt;
+  font-size: 2rem;
   margin: 1rem 0;
   padding: 0.5rem;
   width: 100%;
@@ -254,12 +258,14 @@ header button:active,
   resize: none;
 }
 
-#note-container {
-  width: 100%;
+.note-button-container {
   display: flex;
+  background-color: yellow;
   justify-content: space-between;
 }
-
+input {
+  max-width: 100%;
+}
 @media (min-width: 768px) {
   .note__form {
     width: 40rem;
